--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "4.5.95" !default;
+$mdi-version:          "4.6.95" !default;
 
 $mdi-icons: (
   "ab-testing": F001C,
@@ -58,11 +58,14 @@ $mdi-icons: (
   "account-minus-outline": FAEB,
   "account-multiple": F00E,
   "account-multiple-check": F8C4,
+  "account-multiple-check-outline": F0229,
   "account-multiple-minus": F5D3,
   "account-multiple-minus-outline": FBC1,
   "account-multiple-outline": F00F,
   "account-multiple-plus": F010,
   "account-multiple-plus-outline": F7FF,
+  "account-multiple-remove": F0235,
+  "account-multiple-remove-outline": F0236,
   "account-network": F011,
   "account-network-outline": FBC2,
   "account-off": F012,
@@ -307,6 +310,7 @@ $mdi-icons: (
   "anvil": F89A,
   "apache-kafka": F0031,
   "api": F00C6,
+  "api-off": F0282,
   "apple": F035,
   "apple-finder": F036,
   "apple-icloud": F038,
@@ -326,6 +330,7 @@ $mdi-icons: (
   "apps-box": FD22,
   "arch": F8C6,
   "archive": F03C,
+  "archive-outline": F0239,
   "arm-flex": F008F,
   "arm-flex-outline": F0090,
   "arrange-bring-forward": F03D,
@@ -518,6 +523,7 @@ $mdi-icons: (
   "bank-transfer-in": FA27,
   "bank-transfer-out": FA28,
   "barcode": F071,
+  "barcode-off": F0261,
   "barcode-scan": F072,
   "barley": F073,
   "barley-off": FB39,
@@ -584,6 +590,9 @@ $mdi-icons: (
   "battery-charging-wireless-90": F80F,
   "battery-charging-wireless-alert": F810,
   "battery-charging-wireless-outline": F811,
+  "battery-heart": F023A,
+  "battery-heart-outline": F023B,
+  "battery-heart-variant": F023C,
   "battery-minus": F08C,
   "battery-negative": F08D,
   "battery-outline": F08E,
@@ -594,7 +603,19 @@ $mdi-icons: (
   "battlenet": FB3C,
   "beach": F092,
   "beaker": FCC6,
+  "beaker-alert": F0254,
+  "beaker-alert-outline": F0255,
+  "beaker-check": F0256,
+  "beaker-check-outline": F0257,
+  "beaker-minus": F0258,
+  "beaker-minus-outline": F0259,
   "beaker-outline": F68F,
+  "beaker-plus": F025A,
+  "beaker-plus-outline": F025B,
+  "beaker-question": F025C,
+  "beaker-question-outline": F025D,
+  "beaker-remove": F025E,
+  "beaker-remove-outline": F025F,
   "beats": F097,
   "bed-double": F0092,
   "bed-double-outline": F0093,
@@ -631,6 +652,7 @@ $mdi-icons: (
   "biathlon": FDF7,
   "bible": F0A2,
   "bicycle": F00C7,
+  "bicycle-basket": F0260,
   "bike": F0A3,
   "bike-fast": F014A,
   "billboard": F0032,
@@ -804,6 +826,7 @@ $mdi-icons: (
   "bus-articulated-front": F79C,
   "bus-clock": F8C9,
   "bus-double-decker": F79D,
+  "bus-marker": F023D,
   "bus-multiple": FF5C,
   "bus-school": F79E,
   "bus-side": F79F,
@@ -955,6 +978,8 @@ $mdi-icons: (
   "card-bulleted-settings": FB50,
   "card-bulleted-settings-outline": FB51,
   "card-outline": FB52,
+  "card-plus": F022A,
+  "card-plus-outline": F022B,
   "card-search": F009F,
   "card-search-outline": F00A0,
   "card-text": FB53,
@@ -1043,6 +1068,7 @@ $mdi-icons: (
   "chart-line-stacked": F76A,
   "chart-line-variant": F7B0,
   "chart-multiline": F8D3,
+  "chart-multiple": F023E,
   "chart-pie": F12B,
   "chart-scatter-plot": FEAF,
   "chart-scatter-plot-hexbin": F66D,
@@ -1088,6 +1114,9 @@ $mdi-icons: (
   "checkbox-multiple-marked-circle-outline": F63E,
   "checkbox-multiple-marked-outline": F139,
   "checkerboard": F13A,
+  "checkerboard-minus": F022D,
+  "checkerboard-plus": F022C,
+  "checkerboard-remove": F022E,
   "chef-hat": FB58,
   "chemical-weapon": F13B,
   "chess-bishop": F85B,
@@ -1485,6 +1514,7 @@ $mdi-icons: (
   "delete-sweep-outline": FC3E,
   "delete-variant": F1C1,
   "delta": F1C2,
+  "desk": F0264,
   "desk-lamp": F95E,
   "deskphone": F1C3,
   "desktop-classic": F7BF,
@@ -1532,6 +1562,7 @@ $mdi-icons: (
   "dice-multiple": F76D,
   "dice-multiple-outline": F0181,
   "dictionary": F61D,
+  "digital-ocean": F0262,
   "dip-switch": F7C0,
   "directions": F1D0,
   "directions-fork": F641,
@@ -1627,6 +1658,7 @@ $mdi-icons: (
   "earth-box-off": F6CD,
   "earth-off": F1E8,
   "edge": F1E9,
+  "edge-legacy": F027B,
   "egg": FAAE,
   "egg-easter": FAAF,
   "eight-track": F9E9,
@@ -1692,6 +1724,8 @@ $mdi-icons: (
   "emoticon-happy-outline": F1F5,
   "emoticon-kiss": FC4E,
   "emoticon-kiss-outline": FC4F,
+  "emoticon-lol": F023F,
+  "emoticon-lol-outline": F0240,
   "emoticon-neutral": FC50,
   "emoticon-neutral-outline": F1F6,
   "emoticon-outline": F1F2,
@@ -1727,6 +1761,7 @@ $mdi-icons: (
   "evernote": F204,
   "excavator": F0047,
   "exclamation": F205,
+  "exclamation-thick": F0263,
   "exit-run": FA47,
   "exit-to-app": F206,
   "expand-all": FAB3,
@@ -1771,6 +1806,7 @@ $mdi-icons: (
   "fast-forward": F211,
   "fast-forward-10": FD4D,
   "fast-forward-30": FCE2,
+  "fast-forward-5": F0223,
   "fast-forward-outline": F6D1,
   "fax": F212,
   "feather": F6D2,
@@ -1887,6 +1923,8 @@ $mdi-icons: (
   "file-star-outline": F005D,
   "file-swap": FFD4,
   "file-swap-outline": FFD5,
+  "file-sync": F0241,
+  "file-sync-outline": F0242,
   "file-table": FC5A,
   "file-table-box": F010C,
   "file-table-box-multiple": F010D,
@@ -1966,8 +2004,24 @@ $mdi-icons: (
   "flashlight-off": F245,
   "flask": F093,
   "flask-empty": F094,
+  "flask-empty-minus": F0265,
+  "flask-empty-minus-outline": F0266,
   "flask-empty-outline": F095,
+  "flask-empty-plus": F0267,
+  "flask-empty-plus-outline": F0268,
+  "flask-empty-remove": F0269,
+  "flask-empty-remove-outline": F026A,
+  "flask-minus": F026B,
+  "flask-minus-outline": F026C,
   "flask-outline": F096,
+  "flask-plus": F026D,
+  "flask-plus-outline": F026E,
+  "flask-remove": F026F,
+  "flask-remove-outline": F0270,
+  "flask-round-bottom": F0276,
+  "flask-round-bottom-empty": F0277,
+  "flask-round-bottom-empty-outline": F0278,
+  "flask-round-bottom-outline": F0279,
   "flattr": F246,
   "flickr": FCE3,
   "flip-horizontal": F0112,
@@ -2015,6 +2069,7 @@ $mdi-icons: (
   "folder-lock": F250,
   "folder-lock-open": F251,
   "folder-move": F252,
+  "folder-move-outline": F0271,
   "folder-multiple": F253,
   "folder-multiple-image": F254,
   "folder-multiple-outline": F255,
@@ -2280,6 +2335,7 @@ $mdi-icons: (
   "go-kart": FD55,
   "go-kart-track": FD56,
   "gog": FB7D,
+  "gold": F027A,
   "golf": F822,
   "golf-cart": F01CF,
   "golf-tee": F00AE,
@@ -2296,6 +2352,7 @@ $mdi-icons: (
   "google-circles-extended": F2B2,
   "google-circles-group": F2B3,
   "google-classroom": F2C0,
+  "google-cloud": F0221,
   "google-controller": F2B4,
   "google-controller-off": F2B5,
   "google-drive": F2B6,
@@ -2360,6 +2417,7 @@ $mdi-icons: (
   "hand-saw": FE89,
   "handball": FF70,
   "handcuffs": F0169,
+  "handshake": F0243,
   "hanger": F2C8,
   "hard-hat": F96E,
   "harddisk": F2CA,
@@ -2450,6 +2508,8 @@ $mdi-icons: (
   "home-group": FDB0,
   "home-heart": F826,
   "home-import-outline": FFB9,
+  "home-lightbulb": F027C,
+  "home-lightbulb-outline": F027D,
   "home-lock": F8EA,
   "home-lock-open": F8EB,
   "home-map-marker": F5F8,
@@ -2457,6 +2517,7 @@ $mdi-icons: (
   "home-modern": F2DD,
   "home-outline": F6A0,
   "home-plus": F974,
+  "home-remove": F0272,
   "home-roof": F0156,
   "home-thermometer": FF71,
   "home-thermometer-outline": FF72,
@@ -2611,6 +2672,7 @@ $mdi-icons: (
   "knife": F9FA,
   "knife-military": F9FB,
   "kodi": F314,
+  "kotlin": F0244,
   "kubernetes": F0129,
   "label": F315,
   "label-off": FACA,
@@ -2629,6 +2691,7 @@ $mdi-icons: (
   "language-cpp": F672,
   "language-csharp": F31B,
   "language-css3": F31C,
+  "language-fortran": F0245,
   "language-go": F7D2,
   "language-haskell": FC6E,
   "language-html5": F31D,
@@ -2661,6 +2724,8 @@ $mdi-icons: (
   "layers-outline": F9FD,
   "layers-plus": FE30,
   "layers-remove": FE31,
+  "layers-search": F0231,
+  "layers-search-outline": F0232,
   "layers-triple": FF75,
   "layers-triple-outline": FF76,
   "lead-pencil": F64F,
@@ -2690,6 +2755,12 @@ $mdi-icons: (
   "lifebuoy": F87D,
   "light-switch": F97D,
   "lightbulb": F335,
+  "lightbulb-cfl": F0233,
+  "lightbulb-cfl-off": F0234,
+  "lightbulb-group": F027E,
+  "lightbulb-group-outline": F027F,
+  "lightbulb-multiple": F0280,
+  "lightbulb-multiple-outline": F0281,
   "lightbulb-off": FE32,
   "lightbulb-off-outline": FE33,
   "lightbulb-on": F6E7,
@@ -2753,6 +2824,8 @@ $mdi-icons: (
   "magnify-plus": F34B,
   "magnify-plus-cursor": FA62,
   "magnify-plus-outline": F6EC,
+  "magnify-remove-cursor": F0237,
+  "magnify-remove-outline": F0238,
   "mail": FED8,
   "mail-ru": F34C,
   "mailbox": F6ED,
@@ -2897,6 +2970,7 @@ $mdi-icons: (
   "minus-circle-outline": F377,
   "minus-network": F378,
   "minus-network-outline": FC76,
+  "mirror": F0228,
   "mixcloud": F62A,
   "mixed-martial-arts": FD6B,
   "mixed-reality": F87E,
@@ -3147,6 +3221,7 @@ $mdi-icons: (
   "octagram": F6F8,
   "octagram-outline": F774,
   "odnoklassniki": F3C5,
+  "offer": F0246,
   "office": F3C6,
   "office-building": F990,
   "oil": F3C7,
@@ -3493,6 +3568,7 @@ $mdi-icons: (
   "radio-am": FC9A,
   "radio-fm": FC9B,
   "radio-handheld": F43A,
+  "radio-off": F0247,
   "radio-tower": F43B,
   "radioactive": F43C,
   "radioactive-off": FEDE,
@@ -3563,6 +3639,7 @@ $mdi-icons: (
   "rewind": F45F,
   "rewind-10": FD06,
   "rewind-30": FD72,
+  "rewind-5": F0224,
   "rewind-outline": F709,
   "rhombus": F70A,
   "rhombus-medium": FA0F,
@@ -3577,6 +3654,7 @@ $mdi-icons: (
   "robber": F007A,
   "robot": F6A8,
   "robot-industrial": FB21,
+  "robot-mower": F0222,
   "robot-mower-outline": F021E,
   "robot-vacuum": F70C,
   "robot-vacuum-variant": F907,
@@ -3671,6 +3749,7 @@ $mdi-icons: (
   "seat-legroom-normal": F47F,
   "seat-legroom-reduced": F480,
   "seat-outline": FCA0,
+  "seat-passenger": F0274,
   "seat-recline-extra": F481,
   "seat-recline-normal": F482,
   "seatbelt": FCA1,
@@ -3688,11 +3767,13 @@ $mdi-icons: (
   "select-inverse": F487,
   "select-off": F488,
   "select-place": FFFB,
+  "select-search": F022F,
   "selection": F489,
   "selection-drag": FA6C,
   "selection-ellipse": FD0E,
   "selection-ellipse-arrow-inside": FF3F,
   "selection-off": F776,
+  "selection-search": F0230,
   "send": F48A,
   "send-check": F018C,
   "send-check-outline": F018D,
@@ -3732,11 +3813,14 @@ $mdi-icons: (
   "shape": F830,
   "shape-circle-plus": F65D,
   "shape-outline": F831,
+  "shape-oval-plus": F0225,
   "shape-plus": F495,
   "shape-polygon-plus": F65E,
   "shape-rectangle-plus": F65F,
   "shape-square-plus": F660,
   "share": F496,
+  "share-all": F021F,
+  "share-all-outline": F0220,
   "share-circle": F01D8,
   "share-off": FF40,
   "share-off-outline": FF41,
@@ -4044,6 +4128,8 @@ $mdi-icons: (
   "table-column-width": F4EF,
   "table-edit": F4F0,
   "table-eye": F00BF,
+  "table-headers-eye": F0248,
+  "table-headers-eye-off": F0249,
   "table-large": F4F1,
   "table-large-plus": FFA4,
   "table-large-remove": FFA5,
@@ -4070,10 +4156,16 @@ $mdi-icons: (
   "tag-heart": F68A,
   "tag-heart-outline": FBAB,
   "tag-minus": F90F,
+  "tag-minus-outline": F024A,
   "tag-multiple": F4FB,
+  "tag-off": F024B,
+  "tag-off-outline": F024C,
   "tag-outline": F4FC,
   "tag-plus": F721,
+  "tag-plus-outline": F024D,
   "tag-remove": F722,
+  "tag-remove-outline": F024E,
+  "tag-text": F024F,
   "tag-text-outline": F4FD,
   "tank": FD16,
   "tanker-truck": F0006,
@@ -4152,6 +4244,8 @@ $mdi-icons: (
   "timeline": FBAD,
   "timeline-alert": FFB2,
   "timeline-alert-outline": FFB5,
+  "timeline-clock": F0226,
+  "timeline-clock-outline": F0227,
   "timeline-help": FFB6,
   "timeline-help-outline": FFB7,
   "timeline-outline": FBAE,
@@ -4329,6 +4423,10 @@ $mdi-icons: (
   "vector-point": F55F,
   "vector-polygon": F560,
   "vector-polyline": F561,
+  "vector-polyline-edit": F0250,
+  "vector-polyline-minus": F0251,
+  "vector-polyline-plus": F0252,
+  "vector-polyline-remove": F0253,
   "vector-radius": F749,
   "vector-rectangle": F5C6,
   "vector-selection": F562,
@@ -4490,9 +4588,11 @@ $mdi-icons: (
   "weather-windy-variant": F59E,
   "web": F59F,
   "web-box": FFB1,
+  "web-clock": F0275,
   "webcam": F5A0,
   "webhook": F62F,
   "webpack": F72A,
+  "webrtc": F0273,
   "wechat": F611,
   "weight": F5A1,
   "weight-gram": FD1B,
